# AGI-INC

./: .env.example  .gitignore  .venv_backup_freeze.txt  CLAUDE.md  CLAUDECODEPROMPT.md  Dockerfile.train  FAST_START.md  README.md  REPORT.md  START.md  STARTGUIDE.md  docker-compose.train.yml  launch.sh  pyproject.toml  requirements-rl.txt  requirements.txt  teardown.sh
.claude/: settings.json
.claude/agents/: agent-architect.md  bootstrapper.md  eval-runner.md  sdk-integrator.md
configs/: experiments.yaml  real_v2_task_registry.json
data/datasets/: README.md
data/trajectories/expert_20251224_020443/: collection_summary.json  v2_gomail-11_result.json  v2_gomail-12_result.json  v2_gomail-1_result.json
docs/: RL_TRACK.md  RUNBOOK.md  UITARS_COMPARISON.md
results/: README.md
results/matrix_20251223_221203/: matrix.csv  matrix.md
results/matrix_20251223_225949/: matrix.csv  matrix.md
results/rollout_20251231_052211/: rollout_summary.jsonl
results/rollout_20251231_053940/: rollout_summary.jsonl
results/rollout_20251231_054802/: rollout_summary.jsonl
results/rollout_20251231_055539/: rollout_summary.jsonl
scripts/: check_env.py  collect_expert_traj.py  collect_traj.py  eval_full_matrix.py  eval_subset.py  list_v2_tasks.py  rollout_sampler.py  run_one_debug.py  smoke_test.py  train_bc_unsloth.py  train_dpo_unsloth.py  train_grpo_unsloth.py  train_online_grpo.py  train_tinker.py  verify_exploration.py
src/halo/: constants.py
src/halo/agent/: __init__.py  orchestrator.py
src/halo/cache/: __init__.py  macro.py  vac.py
src/halo/logging/: __init__.py  traj_logger.py
src/halo/obs/: __init__.py  fingerprint.py  obs_summarizer.py  probe.py  (+1 more)
tests/: conftest.py
tests/integration/: test_run_one_debug_smoke.py  test_single_task.py  test_task_registry.py
tests/unit/: test_action_schema.py  test_collect_traj_progress_ranked.py  test_obs_summarizer_keyword_recall.py  test_sdk_import.py
(+21 files in other folders)
