[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "halo-agent"
version = "0.1.0"
description = "HALO-Agent: Worker+Manager browser agent for AGI Inc REAL Bench"
requires-python = ">=3.10"
dependencies = [
    "agisdk==0.3.5",
    "playwright>=1.40.0",
    "pytest>=7.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
rl = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "peft>=0.10.0",
    "trl>=0.8.0",
    "unsloth>=2024.4",
    "bitsandbytes>=0.43.0",
    "einops>=0.7.0",
    "sentencepiece>=0.2.0",
    "wandb>=0.16.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
